--- a/index.html
+++ b/index.html
@@ -3,223 +3,164 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Мои проекты</title>
+    <title>Document</title>
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <!-- КОД 2 -->
-    <div class="html">
-      <div class="item">
-        <div class="html1">html практика</div>
+    <div class="container">
+      <div class="menu">
+        <ul>
+          <li>
+            <a href="#" id="myMrogekt">мои проекты</a>
+          </li>
+          <li>
+            <a href="#" id="about">обо мне</a>
+          </li>
+          <li>
+            <a href="#" id="contact">контакты</a>
+          </li>
+        </ul>
+      </div>
+      <div class="contentModal" id="contentModal">
+        <h2>Мои проекты</h2>
+        <div class="html">
+          <div class="item">
+            <div class="html1">html практика</div>
 
-        <div class="htmlPractik" style="display: none">
-          <h3>html практика</h3>
-          <li>
-            <a href="html_повторение/КТ3 и 4/index.html"
-              >финальный проект 2023</a
-            >
-          </li>
-          <li>
-            <a href="practik_html_css/html+css/index.html">htnl повторение</a>
-          </li>
-          <li>
-            <a href="./html_повторение/project verstka html css/index.html"
-              >верстка сайта</a
-            >
-          </li>
+            <div class="htmlPractik" style="display: none">
+              <li>
+                <a href="html_повторение/КТ3 и 4/index.html"
+                  >финальный проект 2023</a
+                >
+              </li>
+              <li>
+                <a href="practik_html_css/html+css/index.html"
+                  >htnl повторение</a
+                >
+              </li>
+              <li>
+                <a href="./html_повторение/project verstka html css/index.html"
+                  >верстка сайта</a
+                >
+              </li>
+            </div>
+          </div>
+          <div class="item">
+            <div class="html1">изучение js</div>
+            <div class="htmlPractik" style="display: none">
+              <li>
+                <a href="practik_js/colc/colc1/index.html">калькулятор1</a>
+              </li>
+              <li>
+                <a href="practik_js/colc/colc2/index.html">калькулятор2</a>
+              </li>
+              <li>
+                <a href="practik_js/okardion/index.html">аккардион</a>
+              </li>
+              <li>
+                <a href="practik_js/slaider/index.html">слайдер</a>
+              </li>
+              <li>
+                <a href="practik_js/tasks/index.html">управление задачами</a>
+              </li>
+              <li>
+                <a href="practik_js/timer/timer_ferst_version/index.html"
+                  >таймер1</a
+                >
+              </li>
+              <li>
+                <a href="practik_js/timer/timer_second_version_pro/index.html"
+                  >таймер2</a
+                >
+              </li>
+              <li>
+                <a href="practik_js/change_topics/index.html"
+                  >переключение тем сайта</a
+                >
+              </li>
+            </div>
+          </div>
+          <div class="item">
+            <div class="html1">веб компаненты</div>
+            <div class="conthtmlPractikent" style="display: none">
+              <li>
+                <a href="Web-componenu/KT№1/index.html">веб компаненты 1 кт</a>
+              </li>
+              <li>
+                <a href="Web-componenu/kt№2/index.html">веб компаненты 2 кт</a>
+              </li>
+              <li>
+                <a href="Web-componenu/KT№3-не робит/index.html"
+                  >веб компаненты 3 кт</a
+                >
+              </li>
+              <li>
+                <a href="Web-componenu/КТ№4/index.html">веб компаненты 4 кт</a>
+              </li>
+              <li>
+                <a href="Web-componenu/кт№5/index.html">веб компаненты 5 кт</a>
+              </li>
+              <li>
+                <a href="Web-componenu/кт№6/index.html">веб компаненты 6 кт</a>
+              </li>
+            </div>
+          </div>
+          <div class="item">
+            <div class="html1">реакт кт</div>
+            <div class="conthtmlPractikent" style="display: none">
+              <li>
+                <a
+                  href="React_kt_git с когментами/Reakt_kt_1/myapp/public/index.html"
+                  >реакт кт1</a
+                >
+              </li>
+              <li>
+                <a
+                  href="React_kt_git с когментами/Reakt_kt_2/myapp/public/index.html"
+                  >реакт кт2</a
+                >
+              </li>
+              <li>
+                <a
+                  href="React_kt_git с когментами/Reakt_kt_3/myapp/public/index.html"
+                  >реакт кт3</a
+                >
+              </li>
+              <li>
+                <a
+                  href="React_kt_git с когментами/Reakt_kt_4/myapp/public/index.html"
+                  >реакт кт4</a
+                >
+              </li>
+              <li>
+                <a
+                  href="React_kt_git с когментами/Reakt_kt_5/myapp/public/index.html"
+                  >реакт кт5</a
+                >
+              </li>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="item">
-        <div class="html1">изучение js</div>
-        <div class="htmlPractik" style="display: none">
-          <h3>изучение js</h3>
-          <li>
-            <a href="practik_js/colc/colc1/index.html">калькулятор1</a>
-          </li>
-          <li>
-            <a href="practik_js/colc/colc2/index.html">калькулятор2</a>
-          </li>
-          <li>
-            <a href="practik_js/okardion/index.html">аккардион</a>
-          </li>
-          <li>
-            <a href="practik_js/slaider/index.html">слайдер</a>
-          </li>
-          <li>
-            <a href="practik_js/tasks/index.html">управление задачами</a>
-          </li>
-          <li>
-            <a href="practik_js/timer/timer_ferst_version/index.html"
-              >таймер1</a
-            >
-          </li>
-          <li>
-            <a href="practik_js/timer/timer_second_version_pro/index.html"
-              >таймер2</a
-            >
-          </li>
-          <li>
-            <a href="practik_js/change_topics/index.html"
-              >переключение тем сайта</a
-            >
-          </li>
-        </div>
+      <div class="contentModalAbout" id="contentModalAbout">
+        <h2>Информация о авторе</h2>
       </div>
-      <div class="item">
-        <div class="html1">веб компаненты</div>
-        <div class="conthtmlPractikent" style="display: none">
-          <h3>веб компаненты</h3>
-          <li>
-            <a href="Web-componenu/KT№1/index.html">веб компаненты 1 кт</a>
-          </li>
-          <li>
-            <a href="Web-componenu/kt№2/index.html">веб компаненты 2 кт</a>
-          </li>
-          <li>
-            <a href="Web-componenu/KT№3-не робит/index.html"
-              >веб компаненты 3 кт</a
-            >
-          </li>
-          <li>
-            <a href="Web-componenu/КТ№4/index.html">веб компаненты 4 кт</a>
-          </li>
-          <li>
-            <a href="Web-componenu/кт№5/index.html">веб компаненты 5 кт</a>
-          </li>
-          <li>
-            <a href="Web-componenu/кт№6/index.html">веб компаненты 6 кт</a>
-          </li>
-        </div>
-      </div>
-      <div class="item">
-        <div class="html1">реакт кт</div>
-        <div class="conthtmlPractikent" style="display: none">
-          <h3>реакт кт</h3>
-          <li>
-            <a
-              href="React_kt_git с когментами/Reakt_kt_1/myapp/public/index.html"
-              >реакт кт1</a
-            >
-          </li>
-          <li>
-            <a
-              href="React_kt_git с когментами/Reakt_kt_2/myapp/public/index.html"
-              >реакт кт2</a
-            >
-          </li>
-          <li>
-            <a
-              href="React_kt_git с когментами/Reakt_kt_3/myapp/public/index.html"
-              >реакт кт3</a
-            >
-          </li>
-          <li>
-            <a
-              href="React_kt_git с когментами/Reakt_kt_4/myapp/public/index.html"
-              >реакт кт4</a
-            >
-          </li>
-          <li>
-            <a
-              href="React_kt_git с когментами/Reakt_kt_5/myapp/public/index.html"
-              >реакт кт5</a
-            >
-          </li>
-        </div>
+      <div class="contentModalContakt" id="contentModalContakt">
+        <h2>Контакты разработчика</h2>
       </div>
     </div>
 
     <script src="app.js"></script>
   </body>
 </html>
-
-<!-- КОД 1 -->
-
-<!-- <h1>html практика</h1>
-        <li>
-          <a href="./html/КТ3 и 4/index.html">финальный проект 2023</a>
-        </li>
-        <li>
-          <a href="./practik_html_css/html+css/index.html">htnl повторение</a>
-        </li>
-        <li>
-          <a href="./practik_html_css/project verstka html css/"
-            >верстка сайта</a
-          >
-        </li>
-        <li>
-          <a href="./practik_js/change_topics/index.html"
-            >переключение тем сайта</a
-          >
-        </li> 
-        
-    <h1>изучение js</h1>
-    <li>
-      <a href="./practik_js/colc/colc1/index.html">калькулятор1</a>
-    </li>
-    <li>
-      <a href="./practik_js/colc/colc2/index.html">калькулятор2</a>
-    </li>
-    <li>
-      <a href="./practik_js/okardion/index.html">аккардион</a>
-    </li>
-    <li>
-      <a href="./practik_js/slaider/index.html">слайдер</a>
-    </li>
-    <li>
-      <a href="./practik_js/tasks/index.html">управление задачами</a>
-    </li>
-    <li>
-      <a href="./practik_js/timer/timer_ferst_version/index.html">таймер1</a>
-    </li>
-    <li>
-      <a href="./practik_js/timer/timer_second_version_pro/index.html"
-        >таймер2</a
-      >
-    </li> 
-     <h1>веб компаненты</h1>
-    <li>
-      <a href="./Web-componenu/KT№1/index.html">веб компаненты 1 кт</a>
-    </li>
-    <li>
-      <a href="./Web-componenu/kt№2/index.html">веб компаненты 2 кт</a>
-    </li>
-    <li>
-      <a href="./Web-componenu/KT№3-не робит/index.html">веб компаненты 3 кт</a>
-    </li>
-    <li>
-      <a href="./Web-componenu/КТ№4/index.html">веб компаненты 4 кт</a>
-    </li>
-    <li>
-      <a href="./Web-componenu/кт№5/index.html">веб компаненты 5 кт</a>
-    </li>
-    <li>
-      <a href="./Web-componenu/KT№6/index.html">веб компаненты 6 кт</a>
-    </li> 
-
-     <h1>реакт кт</h1>
-    <li>
-      <a href="./React_kt_git с когментами/Reakt_kt_1/myapp/public/index.html"
-        >реакт кт1</a
-      >
-    </li>
-    <li>
-      <a href="./React_kt_git с когментами/Reakt_kt_2/myapp/public/index.html"
-        >реакт кт2</a
-      >
-    </li>
-    <li>
-      <a href="./React_kt_git с когментами/Reakt_kt_3/myapp/public/index.html"
-        >реакт кт3</a
-      >
-    </li>
-    <li>
-      <a href="./React_kt_git с когментами/Reakt_kt_4/myapp/public/index.html"
-        >реакт кт4</a
-      >
-    </li>
-    <li>
-      <a href="./React_kt_git с когментами/Reakt_kt_5/myapp/public/index.html"
-        >реакт кт5</a
-      >
-    </li> -->
+<!-- <div class="content">
+        <h2>Мои проекты</h2>
+        <ul>
+          <li>
+            <a href="#">проекты на js </a>
+          </li>
+          <li>
+            <a href="#">верстка </a>
+          </li>
+        </ul>
+      </div> -->
