сделали визуал портфолио

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </li>
             </div>
           </div>
-          <div class="item">
+          <!-- <div class="item">
             <div class="html1">реакт кт</div>
             <div class="conthtmlPractikent" style="display: none">
               <li>
@@ -139,7 +139,7 @@
                 >
               </li>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="contentModalAbout" id="contentModalAbout">
