--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Мои проекты</h2>
         <div class="html">
           <div class="item">
-            <div class="html1">html практика</div>
+            <div class="html1">проекты с html и css</div>
 
             <div class="htmlPractik" style="display: none">
               <li>
@@ -34,8 +34,13 @@
                 >
               </li>
               <li>
-                <a href="practik_html_css/html+css/index.html"
-                  >htnl повторение</a
+                <a href="./html_повторение/html+css/index.html"
+                  >повторение html</a
+                >
+              </li>
+              <li>
+                <a href="./html_повторение/html+css/index.html"
+                  >повторение html 2</a
                 >
               </li>
               <li>
@@ -45,38 +50,50 @@
               </li>
             </div>
           </div>
+
           <div class="item">
-            <div class="html1">изучение js</div>
+            <div class="html1">проекты с js</div>
             <div class="htmlPractik" style="display: none">
               <li>
                 <a href="practik_js/colc/colc1/index.html">калькулятор1</a>
               </li>
+
               <li>
                 <a href="practik_js/colc/colc2/index.html">калькулятор2</a>
               </li>
+
               <li>
                 <a href="practik_js/okardion/index.html">аккардион</a>
               </li>
+
               <li>
                 <a href="practik_js/slaider/index.html">слайдер</a>
               </li>
+
               <li>
                 <a href="practik_js/tasks/index.html">управление задачами</a>
               </li>
+
               <li>
                 <a href="practik_js/timer/timer_ferst_version/index.html"
                   >таймер1</a
                 >
               </li>
+
               <li>
                 <a href="practik_js/timer/timer_second_version_pro/index.html"
                   >таймер2</a
                 >
               </li>
+
               <li>
                 <a href="practik_js/change_topics/index.html"
                   >переключение тем сайта</a
                 >
+              </li>
+
+              <li>
+                <a href="practik_js/galereya/index.html">галерея</a>
               </li>
             </div>
           </div>
@@ -153,14 +170,3 @@
     <script src="app.js"></script>
   </body>
 </html>
-<!-- <div class="content">
-        <h2>Мои проекты</h2>
-        <ul>
-          <li>
-            <a href="#">проекты на js </a>
-          </li>
-          <li>
-            <a href="#">верстка </a>
-          </li>
-        </ul>
-      </div> -->
