--- a/index.html
+++ b/index.html
@@ -161,9 +161,21 @@
       </div>
       <div class="contentModalAbout" id="contentModalAbout">
         <h2>Информация о авторе</h2>
+        <p>
+          Всем привет меня зовут Семчук Сергей я учусь на разработчика веб
+          сайтов
+        </p>
+        <p>
+          В будущем хочу поменять направление и стать оператором и режесером
+          (монтажа) или просто монтажором
+        </p>
       </div>
       <div class="contentModalContakt" id="contentModalContakt">
         <h2>Контакты разработчика</h2>
+        <footer>
+          <a href="https://t.me/Sego_077" target="_blank">Мой Telegram</a>
+        </footer>
+        <a href="https://github.com/" target="_blank">GitHub</a>
       </div>
     </div>
 
