добавил название сайта

--- a/html_повторение/html+css/index.html
+++ b/html_повторение/html+css/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./statik/style.css" />
     <link rel="stylesheet" href="./statik/mobile.css" />
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon" />
   </head>
   <body>
     <header class="header">
