--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Мои проекты</title>
     <link rel="stylesheet" href="app.css" />
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon" />
   </head>
+
   <body>
     <div class="container">
       <div class="menu">
