--- a/Web-componenu/KT№3-не робит/index.html
+++ b/Web-componenu/KT№3-не робит/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.html">
-  <title>Custom Card Component</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.html" />
+    <title>Custom Card Component</title>
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon" />
+  </head>
+  <body>
+    <!-- Пример использования компонента -->
+    <custom-card>
+      <div slot="header">Заголовок карточки 1</div>
+      <div slot="content">Содержание карточки 1</div>
+    </custom-card>
 
-<!-- Пример использования компонента -->
-<custom-card>
-  <div slot="header">Заголовок карточки 1</div>
-  <div slot="content">Содержание карточки 1</div>
-</custom-card>
+    <custom-card>
+      <div slot="header">Заголовок карточки 2</div>
+      <img
+        slot="content"
+        src="./main/череп1.jpg"
+        alt="Изображение для карточки 2"
+      />
+    </custom-card>
 
-<custom-card>
-  <div slot="header">Заголовок карточки 2</div>
-  <img slot="content" src="./main/череп1.jpg" alt="Изображение для карточки 2">
-</custom-card>
-
-<script src="./code.js"></script>
-</body>
+    <script src="./code.js"></script>
+  </body>
 </html>
