--- a/Web-componenu/кт№5/index.html
+++ b/Web-componenu/кт№5/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Погодный виджет</title>
-    <link rel="stylesheet" href="./weather-widget.css">
+    <link rel="stylesheet" href="./weather-widget.css" />
     <script src="./weather-widget.js"></script>
-</head>
-<body>
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon" />
+  </head>
+  <body>
     <weather-widget></weather-widget>
-</body>
+  </body>
 </html>
