--- a/Web-componenu/кт№6/index.html
+++ b/Web-componenu/кт№6/index.html
@@ -1,28 +1,33 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Список задач</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="cod.js" defer></script>
-</head>
-<body>
-  <template id="task-list-template">
-    <style>
-      /* Стили для внешнего вида компонента */
-    </style>
-    <div class="task-list">
-      <h2>Список задач</h2>
-      <form id="task-form">
-        <input type="text" id="new-task" placeholder="Добавить новую задачу" />
-        <button type="button" id="add-task">Добавить</button>
-      </form>
-      <ul id="tasks-container"></ul>
-    </div>
-  </template>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Список задач</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="cod.js" defer></script>
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon" />
+  </head>
+  <body>
+    <template id="task-list-template">
+      <style>
+        /* Стили для внешнего вида компонента */
+      </style>
+      <div class="task-list">
+        <h2>Список задач</h2>
+        <form id="task-form">
+          <input
+            type="text"
+            id="new-task"
+            placeholder="Добавить новую задачу"
+          />
+          <button type="button" id="add-task">Добавить</button>
+        </form>
+        <ul id="tasks-container"></ul>
+      </div>
+    </template>
 
-  <task-list></task-list>
-</body>
+    <task-list></task-list>
+  </body>
 </html>
