--- a/html_повторение/project verstka html css/index.html
+++ b/html_повторение/project verstka html css/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./static/css/app.css" />
     <link rel="stylesheet" href="./static/css/app__mobole_version.css" />
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon" />
   </head>
   <body>
     <div class="container">
