--- a/my project/practik_js/take exsample/game.html
+++ b/my project/practik_js/take exsample/game.html
@@ -2,27 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>угадай число</title>
+    <meta name="viewport" content="width=\, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="pageStart">
-      <div class="starPlay">
-        <h2>Начать игру</h2>
-        <div class="play"></div>
-      </div>
-    </div>
-    <div class="menu" style="display: none">
-      <div class="menuList">
-        <div class="level level1">Легкий уровень</div>
-        <div class="level level2">Средний уровень</div>
-        <div class="level level3">Сложный уровень</div>
-        <div class="level level4">хард кор</div>
-      </div>
-    </div>
-
-    <div class="container2" style="display: none">
+    <div class="container2">
       <div class="rov0">
         <p>надо набрать 20 очков что бы перейти на на следующий уровень</p>
       </div>
@@ -77,6 +62,5 @@
         </div>
       </div>
     </div>
-    <script src="code.js"></script>
   </body>
 </html>
