--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <!-- <div class="container">
+     <div class="container">
       <div class="menu">
         <ul>
           <li>
@@ -96,6 +96,10 @@
               <li>
                 <a href="practik_js/galereya/index.html">галерея</a>
               </li>
+
+              <li>
+                <a href="my project/practik_js/game10/index.html">галерея</a>
+              </li>
             </div>
           </div>
           <div class="item">
@@ -122,7 +126,7 @@
                 <a href="Web-componenu/кт№6/index.html">веб компаненты 6 кт</a>
               </li>
             </div>
-          </div> -->
+          </div> 
     <!-- <div class="item">
             <div class="html1">реакт кт</div>
             <div class="conthtmlPractikent" style="display: none">
@@ -158,7 +162,7 @@
               </li>
             </div>
           </div> -->
-    <!-- </div>
+    </div>
       </div>
       <div class="contentModalAbout" id="contentModalAbout">
         <h2>Информация о авторе</h2>
@@ -182,6 +186,6 @@
 
     <script src="app.js"></script>
   </body>
-</html> -->
+</html> 
   </body>
 </html>
