--- a/my project/practik_js/game10/index.html
+++ b/my project/practik_js/game10/index.html
@@ -29,16 +29,18 @@
       <div class="rov1">
         <div class="col1">
           <div class="lavel1">легкий уровень</div>
-          <div class="timer1">06:00</div>
+          <div class="timer1">07:00</div>
         </div>
         <div class="col2"></div>
         <div class="col3">
           <div class="point">
-            <p>количество очков 10</p>
+            <p>количество очков <span id="point1">20</span></p>
           </div>
-          <div class="poputka">количество попыток 30</div>
+          <div class="poputka">
+            количество попыток <span id="countPoputki">20</span>
+          </div>
           <div class="diapazone">диапазон от 1 до 20</div>
-          <div class="podskazka">количество подсказок 5</div>
+          <div class="podskazka">количество подсказок 2</div>
           <div class="podskazkaButton">подсказка</div>
         </div>
       </div>
@@ -77,6 +79,7 @@
         </div>
       </div>
     </div>
+
     <script src="code.js"></script>
   </body>
 </html>
