--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="item">
             <div class="html1">проекты с js</div>
             <div class="htmlPractik" style="display: none">
-              <li>
+              <!-- <li>
                 <a href="practik_js/colc/colc1/index.html">калькулятор1</a>
               </li>
 
@@ -95,10 +95,10 @@
 
               <li>
                 <a href="practik_js/galereya/index.html">галерея</a>
-              </li>
+              </li> -->
 
               <li>
-                <a href="my project/practik_js/game10/index.html">галерея</a>
+                <a href="my project/practik_js/game10/index.html">игра</a>
               </li>
             </div>
           </div>
