--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="html1"><h2>Мои проекты</h2></div>
 
             <div class="htmlPractik" style="display: none">
-              <li>
+              <!-- <li>
                 <a href="html_повторение/КТ3 и 4/index.html"
                   >финальный проект 2023</a
                 >
@@ -50,7 +50,7 @@
                 >
               </li>
             </div>
-          </div>
+          </div> -->
 
           <div class="item">
             <div class="html1">проекты с js</div>
@@ -105,7 +105,7 @@
           <div class="item">
             <div class="html1">веб компаненты</div>
             <div class="conthtmlPractikent" style="display: none">
-              <li>
+              <!-- <li>
                 <a href="Web-componenu/KT№1/index.html">веб компаненты 1 кт</a>
               </li>
               <li>
@@ -126,46 +126,11 @@
                 <a href="Web-componenu/кт№6/index.html">веб компаненты 6 кт</a>
               </li>
             </div>
-          </div> 
-    <!-- <div class="item">
-            <div class="html1">реакт кт</div>
-            <div class="conthtmlPractikent" style="display: none">
-              <li>
-                <a
-                  href="React_kt_git с когментами/Reakt_kt_1/myapp/public/index.html"
-                  >реакт кт1</a
-                >
-              </li>
-              <li>
-                <a
-                  href="React_kt_git с когментами/Reakt_kt_2/myapp/public/index.html"
-                  >реакт кт2</a
-                >
-              </li>
-              <li>
-                <a
-                  href="React_kt_git с когментами/Reakt_kt_3/myapp/public/index.html"
-                  >реакт кт3</a
-                >
-              </li>
-              <li>
-                <a
-                  href="React_kt_git с когментами/Reakt_kt_4/myapp/public/index.html"
-                  >реакт кт4</a
-                >
-              </li>
-              <li>
-                <a
-                  href="React_kt_git с когментами/Reakt_kt_5/myapp/public/index.html"
-                  >реакт кт5</a
-                >
-              </li>
-            </div>
-          </div> -->
-    </div>
-      </div>
+          </div>  -->
+   
+    
       <div class="contentModalAbout" id="contentModalAbout">
-        <h2>Информация о авторе</h2>
+        <!-- <h2>Информация о авторе</h2>
         <p>
           Всем привет меня зовут Семчук Сергей я учусь на разработчика веб
           сайтов
@@ -174,15 +139,15 @@
           В будущем хочу поменять направление и стать оператором и режесером
           (монтажа) или просто монтажором
         </p>
-      </div>
+      </div> -->
       <div class="contentModalContakt" id="contentModalContakt">
-        <h2>Контакты разработчика</h2>
+        <!-- <h2>Контакты разработчика</h2>
         <footer>
           <a href="https://t.me/Sego_077" target="_blank">Мой Telegram</a>
         </footer>
         <a href="https://github.com/" target="_blank">GitHub</a>
       </div>
-    </div>
+    </div> -->
 
     <script src="app.js"></script>
   </body>
