--- a/my project/practik_js/game10/index.html
+++ b/my project/practik_js/game10/index.html
@@ -63,7 +63,12 @@
         <div class="col2_2">
           <div class="form">
             <div class="form1">
-              <input type="number" name="numberInput" readonly />
+              <input
+                class="numberWin"
+                type="number"
+                name="numberInput"
+                readonly
+              />
             </div>
           </div>
         </div>
