--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="item">
-            <div class="html1">веб компаненты</div>
+            <!-- <div class="html1">веб компаненты</div> -->
             <div class="conthtmlPractikent" style="display: none">
               <!-- <li>
                 <a href="Web-componenu/KT№1/index.html">веб компаненты 1 кт</a>
