--- a/my project/practik_js/game10/index.html
+++ b/my project/practik_js/game10/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="pageStart">
       <div class="starPlay">
+        <h5>Открывать только на пк</h5>
         <h2>Начать игру</h2>
         <div class="play"></div>
       </div>
@@ -83,9 +84,12 @@
         <div class="exsit" id="exsitGame">
           <button><img src="img/Icon.png" width="64px" alt="." /></button>
         </div>
-        <div class="agen" id="restartGame">
-          <button><img src="img/Rotate ccw.png" width="64px" alt="." /></button>
-        </div>
+        <!-- <div class="agen" id="restartGame">
+          <button>
+            <img src="img/Rotate ccw.png" width="64px" alt="." /> кнопка не
+            работает
+          </button>
+        </div> -->
       </div>
     </div>
 
