--- a/my project/practik_js/game10/index.html
+++ b/my project/practik_js/game10/index.html
@@ -10,8 +10,9 @@
   <body>
     <div class="pageStart">
       <div class="starPlay">
+        <div><h1>Игра временно не работает</h1></div>
         <h5>Открывать только на пк</h5>
-        <h2>Начать игру</h2>
+        <!-- <h2>Начать игру</h2> -->
         <div class="play"></div>
       </div>
     </div>
@@ -20,10 +21,13 @@
         <div class="level level1">Легкий уровень</div>
         <div class="level level2">Средний уровень</div>
         <div class="level level3">Сложный уровень</div>
-        <div class="level level4">хард кор</div>
+        <div class="level level4">хардкор</div>
       </div>
     </div>
-
+    <div class="WinInfo">
+      <h1>поздравляю! вы прошли игру</h1>
+      <p>ваше общее количество очков <span id="OllWinPoint"></span></p>
+    </div>
     <div class="container2" style="display: none">
       <div class="rov0">
         <p class="numberLavel">
